--- a/app/globals.css
+++ b/app/globals.css
@@ -18,10 +18,13 @@
 
 body {
   color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+  font-family: var(--font-anonik) !important;
+}
+
+.bg-primary {
+  background-color: rgb(142, 174, 252) !important;
+}
+
+.code-bg {
+  background-color: rgb(250, 250, 250);
 }
